# amaranth-stream

./: .gitignore  README.md  TODO.md  pyproject.toml
amaranth_stream/: __init__.py  _base.py  adapter.py  arbiter.py  axi_stream.py  buffer.py  cdc.py  converter.py  fifo.py  monitor.py  packet.py  pipeline.py  routing.py  sim.py  transform.py
tests/: test_adapter.py  test_arbiter.py  test_axi_stream.py  test_base.py  test_buffer.py  test_converter.py  test_fifo.py  test_integration.py  test_monitor.py  test_packet.py  test_pipeline.py  test_routing.py  test_sim.py  test_transform.py
