[project]
name = "amaranth-stream"
version = "0.1.0"
description = "Stream processing library for Amaranth HDL"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=9.0.2",
    "-e file:///${PROJECT_ROOT}/../amaranth#egg=amaranth",
]
